--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,18 @@ services:
     restart: always
     ports:
       - '81:8000'
+    environment:
+      - ALLOW_EMPTY_PASSWORD=${SYMFONY_ALLOW_EMPTY_PASSWORD}
+      - SYMFONY_DATABASE_HOST=${DATABASE_HOST}
+      - SYMFONY_DATABASE_PORT_NUMBER=${DATABASE_PORT_NUMBER}
+      - SYMFONY_DATABASE_USER=${DATABASE_USER}
+      - SYMFONY_DATABASE_NAME=${DATABASE_NAME}
     volumes:
       - './:/app'
     depends_on:
       - postgres
   postgres:
-    container_name: postgresql
+    container_name: postgres
     image: postgres
     restart: always
     ports:
@@ -27,7 +33,5 @@ services:
 networks:
   backroom-nt:
     driver: bridge
-env_file:
-  - ../.env
 
 
