--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,5 @@
-DB_HOST=localhost
-DB_USERNAME=root
-DB_PASSWORD=password
+SYMFONY_ALLOW_EMPTY_PASSWORD=yes
+DATABASE_HOST=postgresql
+DATABASE_PORT_NUMBER=5432
+DATABASE_USER=admin
+DATABASE_NAME=app
