--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./backend:/var/www/html/
+      - ./symfony:/var/www/html/
     networks:
       - backroom-nt
   postgres:
