--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,15 +18,13 @@ services:
     container_name: postgres
     image: postgres:alpine3.17
     restart: always
-    ports:
-      [ "1010:5432" ]
     environment:
-      POSTGRES_DB: ${DATABASE_NAME}
-      POSTGRES_PORT: ${DATABASE_PORT}
       POSTGRES_USER: ${DATABASE_USER}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
     volumes:
-        [ ./pqsql:/var/www/pqsql/ ]
+      - ./pqsql:/var/www/pqsql/
+    ports:
+      - "1010:5432"
     networks:
       - backroom-nt
   nuxtjs:
@@ -44,6 +42,7 @@ services:
         [ ./frontend:/frontend/ ]
     networks:
       - backroom-nt
+
   liquibase:
    container_name: liquibase
    image: liquibase/liquibase:4.19
@@ -56,13 +55,42 @@ services:
     - ./liquibase/changeLog/:/liquibase/changelog/
    command: --defaults-file=/liquibase/changelog/liquibase.properties update
    depends_on: [postgres]
+   networks:
+      - backroom-nt
+
   flyway:
+    container_name: flyway
     image: flyway/flyway
-    command: -url=jdbc:postgresql://postgresql:5432/app -schemas=public -user=admin -password=password -connectRetries=60 migrate
+    command: -url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME} -schemas=public -user=${DATABASE_USER} -password=${DATABASE_PASSWORD} migrate
     volumes:
-      - .:/flyway/sql
-    depends_on:
-      - postgres
+      - ./flyway/sql:/flyway/sql
+    depends_on: [postgres]
+    networks:
+      - backroom-nt
+
+  db:
+    container_name: db
+    image: postgres:alpine3.17
+    restart: always
+    environment:
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+    volumes:
+      - ./pqsql:/var/www/pqsql/
+    ports:
+      - "1010:5432"
+    networks:
+      - backroom-nt
+
+  adminer:
+    image: adminer
+    restart: always
+
+    networks:
+      - backroom-nt
+    ports:
+      - "5050:8080"
+
 networks:
   backroom-nt:
     driver: bridge
