--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     image: flyway/flyway
     command: -url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME} -schemas=public -user=${DATABASE_USER} -password=${DATABASE_PASSWORD} migrate
     volumes:
-      - ./flyway/sql:/flyway/sql
+      - ./dbmigration:/flyway/sql
     depends_on: [postgres]
     networks:
       - backroom-nt
