--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,7 @@ services:
         FLYWAY_PASSWORD: ${DATABASE_PASSWORD}
         FLYWAY_SCHEMAS: ${FLYWAY_SCHEMAS}
         FLYWAY_LOCATIONS: ${FLYWAY_LOCATIONS}
-    command: migrate
+    command: ['baseline', 'migrate', 'info']
     volumes:
       - ./flyway/sql:/flyway/sql
       - ./flyway/conf:/flyway/conf
