--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build:
       context: ./symfony
       dockerfile: Dockerfile
+    environment:
+      DATABASE_URL: ${DATABASE_URL}
     restart: always
     depends_on: [postgres]
     ports:
