--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./symfony:/var/www/html/
+      - ./symfony:/var/www/
     networks:
       - backroom-nt
 
