remove api platform

--- a/symfony/.gitignore
+++ b/symfony/.gitignore
@@ -1,7 +1,10 @@
 
-###> lexik/jwt-authentication-bundle ###
-/config/jwt/*.pem
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
 /var/
 /vendor/
-
-###< lexik/jwt-authentication-bundle ###
+###< symfony/framework-bundle ###
