--- a/symfony/config/routes.yaml
+++ b/symfony/config/routes.yaml
@@ -3,3 +3,8 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+
+products:
+    path: /dummy
+    controller: App\Controller\DummyController::index
