--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       dockerfile: Dockerfile
     environment:
       DATABASE_URL: ${DATABASE_URL}
+      MAILER_DSN: ${MAILER_DSN}
     restart: always
     depends_on: [postgres]
     ports:
@@ -74,6 +75,15 @@ services:
     ports:
       - "5050:8080"
 
+  mailcatcher:
+    container_name: mailcatcher
+    image: schickling/mailcatcher
+    restart: always
+    networks:
+      - backroom-nt
+    ports:
+      - "1080:1080"
+      - "1025:1025"
 networks:
   backroom-nt:
     driver: bridge
