--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       DATABASE_URL: ${DATABASE_URL}
       MAILER_DSN: ${MAILER_DSN}
+      HASH_KEY: ${HASH_KEY}
     restart: always
     depends_on: [postgres]
     ports:
