XFOL-1 update readme

--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,26 @@
 SYMFONY_ALLOW_EMPTY_PASSWORD=yes
-DATABASE_HOST=postgresql
-DATABASE_PORT_NUMBER=5432
+
+## Symfony
+HASH_KEY=lolCool
+MAILER_DSN=smtp://mailcatcher:1025
+
+## Database config
+DATABASE_DRIVER=postgresql
+DATABASE_HOST=postgres
+DATABASE_PORT=5432
+DATABASE_NAME=postgres
 DATABASE_USER=admin
-DATABASE_NAME=app
+DATABASE_PASSWORD=admin
+DATABASE_URL=${DATABASE_DRIVER}://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+
+
+## Nuxt.js config
+FRONTEND_HOST=0.0.0.0
+FRONTEND_PORT=3000
+
+
+## Flyway config
+FLYWAY_URL=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+FLYWAY_SCHEMAS=public
+FLYWAY_LOCATIONS=filesystem:/flyway/sql
+
