--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,7 @@ services:
       - backroom-nt
 
   adminer:
+    container_name: adminer
     image: adminer
     restart: always
     networks:
@@ -76,6 +77,7 @@ services:
       - "5050:8080"
 
   mailcatcher:
+    container_name: mailcatcher
     image: dockage/mailcatcher
     restart: on-failure
     networks:
