--- a/symfony/composer.json
+++ b/symfony/composer.json
@@ -45,7 +45,8 @@
         "symfony/yaml": "6.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "vich/uploader-bundle": "^2.1"
+        "vich/uploader-bundle": "^2.1",
+        "zenstruck/foundry": "^1.34"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -55,7 +56,8 @@
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^6.2",
         "symfony/stopwatch": "6.1.*",
-        "symfony/web-profiler-bundle": "6.1.*"
+        "symfony/web-profiler-bundle": "6.1.*",
+        "zenstruck/browser": "^1.4"
     },
     "config": {
         "allow-plugins": {
