--- a/symfony/phpunit.xml.dist
+++ b/symfony/phpunit.xml.dist
@@ -39,4 +39,7 @@
         <extension class="Symfony\Component\Panther\ServerExtension" />
     </extensions>
     -->
+  <extensions>
+    <extension class="Zenstruck\Browser\Test\BrowserExtension" />
+  </extensions>
 </phpunit>
