--- a/symfony/composer.json
+++ b/symfony/composer.json
@@ -49,6 +49,7 @@
         "zenstruck/foundry": "^1.34"
     },
     "require-dev": {
+        "mtdowling/jmespath.php": "^2.6",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
