--- a/symfony/composer.json
+++ b/symfony/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "juststeveking/http-status-code": "^3.0",
         "lexik/jwt-authentication-bundle": "^2.19",
         "nelmio/cors-bundle": "^2.3",
         "phpdocumentor/reflection-docblock": "^5.3",
@@ -45,10 +46,10 @@
         "symfony/yaml": "6.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "vich/uploader-bundle": "^2.1",
-        "zenstruck/foundry": "^1.34"
+        "vich/uploader-bundle": "^2.1"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "mtdowling/jmespath.php": "^2.6",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.1.*",
@@ -58,7 +59,8 @@
         "symfony/phpunit-bridge": "^6.2",
         "symfony/stopwatch": "6.1.*",
         "symfony/web-profiler-bundle": "6.1.*",
-        "zenstruck/browser": "^1.4"
+        "zenstruck/browser": "^1.4",
+        "zenstruck/foundry": "^1.34"
     },
     "config": {
         "allow-plugins": {
