--- a/symfony/config/packages/vich_uploader.yaml
+++ b/symfony/config/packages/vich_uploader.yaml
@@ -4,7 +4,7 @@ vich_uploader:
       type: attribute
     mappings:
       media_object:
-        uri_prefix: /profile
-        upload_destination: '%kernel.project_dir%/media/profile'
+        uri_prefix: /uploaded
+        upload_destination: '%kernel.project_dir%/media/uploaded'
         # Will rename uploaded files using a uniqueid as a prefix.
         namer: Vich\UploaderBundle\Naming\OrignameNamer
