moving security data fixtures to env

--- a/.env-example
+++ b/.env-example
@@ -3,6 +3,10 @@ SYMFONY_ALLOW_EMPTY_PASSWORD=yes
 ## Symfony
 HASH_KEY=lolCool
 MAILER_DSN=smtp://mailcatcher:1025
+ADMIN_EMAIL=admin@admin.com
+ADMIN_PASSWORD=StrongPassword
+ADMIN_NAME=ashraf
+ADMIN_LASTNAME=beshtawi
 
 ## Database config
 DATABASE_DRIVER=postgresql
