--- a/nuxtjs/package.json
+++ b/nuxtjs/package.json
@@ -15,10 +15,13 @@
     "nuxt": "^3.8.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.7",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.3.23"
   },
   "dependencies": {
+    "@mdi/font": "^7.3.67",
     "sass": "^1.69.5"
   }
 }
