--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,8 @@ services:
     build:
       context: ./symfony
       dockerfile: Dockerfile
-    environment:
-      DATABASE_URL: ${DATABASE_URL}
-      MAILER_DSN: ${MAILER_DSN}
-      HASH_KEY: ${HASH_KEY}
+    env_file:
+      - .env
     restart: always
     depends_on: [postgres]
     ports:
